--- a/app/src/main/res/xml/accessibility_service_config.xml
+++ b/app/src/main/res/xml/accessibility_service_config.xml
@@ -5,5 +5,4 @@
     android:accessibilityFlags="flagDefault"
     android:canRetrieveWindowContent="true"
     android:isAccessibilityTool="false"
-    android:notificationTimeout="10"
-    android:settingsActivity="com.nothing.assist.SettingsActivity" />
+    android:notificationTimeout="10" />
